Agregué los link para pasar entre páginas

--- a/formulario.html
+++ b/formulario.html
@@ -31,9 +31,9 @@
             <h2>Menú</h2>
             <ul>
                 <ul>
-                    <li><a href="#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
-                    <li><a href="#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
-                    <li><a href="#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
+                    <li><a href="/index.html#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
+                    <li><a href="/index.html#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
+                    <li><a href="/index.html#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
                 </ul>
             </ul>
             <button id="modo-toggle">🌙 Modo oscuro</button>
