--- a/perfil.html
+++ b/perfil.html
@@ -31,13 +31,11 @@
         <!--Menu lateral-->
         <aside class="menu-lateral">
             <h2>Menú</h2>
-            <ul>
                 <ul>
-                    <li><a href="/index.html#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
-                    <li><a href="/index.html#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
-                    <li><a href="/index.html#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
+                    <li><a href="index.html#sobre-mi"><i class="fas fa-user"></i> Sobre mí</a></li>
+                    <li><a href="index.html#habilidades"><i class="fas fa-code"></i> Habilidades</a></li>
+                    <li><a href="index.html#redes-sociales"><i class="fas fa-share-alt"></i> Redes sociales</a></li>
                 </ul>
-            </ul>
             <button id="modo-toggle">🌙 Modo oscuro</button>
         </aside>
 
